--- a/src/app.html
+++ b/src/app.html
@@ -8,5 +8,13 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+
+		<!-- Cloudflare Web Analytics -->
+		<script
+			defer
+			src="https://static.cloudflareinsights.com/beacon.min.js"
+			data-cf-beacon='{"token": "a40e91b167b64eb4a5beed765cbe54e4"}'
+		></script>
+		<!-- End Cloudflare Web Analytics -->
 	</body>
 </html>
