--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,13 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link
+			rel="preload"
+			href="%sveltekit.assets%/fonts/DMSans-VariableFont_opsz,wght.ttf"
+			as="font"
+			type="font/ttf"
+			crossorigin
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
