--- a/src/app.html
+++ b/src/app.html
@@ -11,6 +11,20 @@
 			type="font/ttf"
 			crossorigin
 		/>
+		<link
+			rel="preload"
+			href="%sveltekit.assets%/fonts/ChivoMono-VariableFont_wght.ttf"
+			as="font"
+			type="font/ttf"
+			crossorigin
+		/>
+		<link
+			rel="preload"
+			href="%sveltekit.assets%/fonts/SpaceGrotesk-VariableFont_wght.ttf"
+			as="font"
+			type="font/ttf"
+			crossorigin
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
