add GA for usage comparison

--- a/src/app.html
+++ b/src/app.html
@@ -38,5 +38,17 @@
 			data-cf-beacon='{"token": "a40e91b167b64eb4a5beed765cbe54e4"}'
 		></script>
 		<!-- End Cloudflare Web Analytics -->
+
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-461CNN34M4"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
+
+			gtag('config', 'G-461CNN34M4');
+		</script>
 	</body>
 </html>
