--- a/src/app.html
+++ b/src/app.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
@@ -13,7 +13,14 @@
 		/>
 		<link
 			rel="preload"
-			href="%sveltekit.assets%/fonts/ChivoMono-VariableFont_wght.ttf"
+			href="%sveltekit.assets%/fonts/DMMono-Regular.ttf"
+			as="font"
+			type="font/ttf"
+			crossorigin
+		/>
+		<link
+			rel="preload"
+			href="%sveltekit.assets%/fonts/DMMono-Medium.ttf"
 			as="font"
 			type="font/ttf"
 			crossorigin
