--- a/src/app.html
+++ b/src/app.html
@@ -46,6 +46,12 @@
 		></script>
 		<!-- End Cloudflare Web Analytics -->
 
+		<script
+			defer
+			data-domain="openelectricity.org.au"
+			src="https://plausible.io/js/script.js"
+		></script>
+
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-461CNN34M4"></script>
 		<script>
