replace plausible with fathom

--- a/src/app.html
+++ b/src/app.html
@@ -46,11 +46,14 @@
 		></script>
 		<!-- End Cloudflare Web Analytics -->
 
+		<!-- Fathom - beautiful, simple website analytics -->
 		<script
+			src="https://cdn.usefathom.com/script.js"
+			data-spa="auto"
+			data-site="VZODQVAG"
 			defer
-			data-domain="openelectricity.org.au"
-			src="https://plausible.io/js/script.js"
 		></script>
+		<!-- / Fathom -->
 
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-461CNN34M4"></script>
